Modal Close button update

--- a/Brandlogs/BrandProfile/brandLogStories.html
+++ b/Brandlogs/BrandProfile/brandLogStories.html
@@ -1595,6 +1595,11 @@
           >
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content">
+                <div class="d-flex justify-content-end">
+                  <button type="button" class="close btn-danger" style="border-radius: 3px; position: absolute; top: 0;" data-dismiss="modal" aria-label="Close" id="close-button">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
                 <div class="modal-body">
                   <br />
                   <div class="container">
@@ -1643,6 +1648,11 @@
           >
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content d-flex">
+                <div class="d-flex justify-content-end">
+                  <button type="button" class="close btn-danger" style="border-radius: 3px; position: absolute; top: 0;" data-dismiss="modal" aria-label="Close" id="close-button2">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
                 <div class="modal-body">
                   <div class="d-flex justify-content-center">
                     <img
@@ -1687,6 +1697,11 @@
           >
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content" style="padding-top: 30%">
+                <div class="d-flex justify-content-end">
+                  <button type="button" class="close btn-danger" style="border-radius: 3px; position: absolute; top: 0;" data-dismiss="modal" aria-label="Close" id="close-button3">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
                 <div class="modal-body">
                   <h4>Verify Phone Number</h4>
                   <br />
@@ -1717,6 +1732,11 @@
           >
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content" id="modal-content">
+                <div class="d-flex justify-content-end">
+                  <button type="button" class="close btn-danger" style="border-radius: 3px; position: absolute; top: 0;" data-dismiss="modal" aria-label="Close" id="close-button4">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
                 <div class="modal-body">
                   <div class="row justify-content-center">
                     <div
@@ -1777,6 +1797,11 @@
           >
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content">
+                <div class="d-flex justify-content-end">
+                  <button type="button" class="close btn-danger" style="border-radius: 3px; position: absolute; top: 0;" data-dismiss="modal" aria-label="Close" id="close-button5">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
                 <div class="modal-body">
                   <h4>When is your Birthday?</h4>
                   <br />
@@ -1846,6 +1871,11 @@
           >
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content" style="padding-top: 150px">
+                <div class="d-flex justify-content-end">
+                  <button type="button" class="close btn-danger" style="border-radius: 3px; position: absolute; top: 0;" data-dismiss="modal" aria-label="Close" id="close-button6">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
                 <div class="modal-body">
                   <h4>Profile Photo</h4>
                   <br />
@@ -1911,6 +1941,11 @@
           >
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content d-flex">
+                <div class="d-flex justify-content-end">
+                  <button type="button" class="close btn-danger" style="border-radius: 3px; position: absolute; top: 0;" data-dismiss="modal" aria-label="Close" id="close-button7">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
                 <div class="modal-body">
                   <h4>Congratulations!</h4>
                   <br />
@@ -1957,6 +1992,11 @@
           >
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content">
+                <div class="d-flex justify-content-end">
+                  <button type="button" class="close btn-danger" style="border-radius: 3px; position: absolute; top: 0;" data-dismiss="modal" aria-label="Close" id="close-button8">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
                 <div class="modal-body">
                   <h4>Payment Method</h4>
                   <hr />
@@ -2057,7 +2097,7 @@
             </div>
           </div>
 
-          <!-- eigth Modal -->
+          <!-- Nineth Modal -->
           <div
             class="modal"
             id="ninth-modal"
@@ -2066,6 +2106,11 @@
           >
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content" style="padding-top: 150px">
+                <div class="d-flex justify-content-end">
+                  <button type="button" class="close btn-danger" style="border-radius: 3px; position: absolute; top: 0;" data-dismiss="modal" aria-label="Close" id="close-button9">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
                 <div class="modal-body">
                   <br />
                   <div class="card-content">
@@ -2170,6 +2215,84 @@
 window.location.href = "../Logstories/logstories.html"
 }
 </script>
+
+    <!-- close the modal using the close button -->
+    <script>
+      // Get a reference to the close button and the modal by ID
+      const closeButton = document.getElementById("close-button");
+      const modal = document.getElementById("first-modal");
+
+      const closeButton2 = document.getElementById("close-button2");
+      const modal2 = document.getElementById("second-modal");
+
+      const closeButton3 = document.getElementById("close-button3");
+      const modal3 = document.getElementById("third-modal");
+
+      const closeButton4 = document.getElementById("close-button4");
+      const modal4 = document.getElementById("fourth-modal");
+
+      const closeButton5 = document.getElementById("close-button5");
+      const modal5 = document.getElementById("fifth-modal");
+
+      const closeButton6 = document.getElementById("close-button6");
+      const modal6 = document.getElementById("sixth-modal");
+
+      const closeButton7 = document.getElementById("close-button7");
+      const modal7 = document.getElementById("seventh-modal");
+
+      const closeButton8 = document.getElementById("close-button8");
+      const modal8 = document.getElementById("eigth-modal");
+
+      const closeButton9 = document.getElementById("close-button9");
+      const modal9 = document.getElementById("nineth-modal");
+
+
+      // Add an event listener to the close button to close the modal when clicked
+      closeButton.addEventListener("click", function() {
+        // Use Bootstrap's modal method to close the modal
+        $(modal).modal("hide");
+      });
+
+      closeButton2.addEventListener("click", function() {
+        // Use Bootstrap's modal method to close the modal
+        $(modal2).modal("hide");
+      });
+
+      closeButton3.addEventListener("click", function() {
+        // Use Bootstrap's modal method to close the modal
+        $(modal3).modal("hide");
+      });
+
+      closeButton4.addEventListener("click", function() {
+        // Use Bootstrap's modal method to close the modal
+        $(modal4).modal("hide");
+      });
+
+      closeButton5.addEventListener("click", function() {
+        // Use Bootstrap's modal method to close the modal
+        $(modal5).modal("hide");
+      });
+
+      closeButton6.addEventListener("click", function() {
+        // Use Bootstrap's modal method to close the modal
+        $(modal6).modal("hide");
+      });
+
+      closeButton7.addEventListener("click", function() {
+        // Use Bootstrap's modal method to close the modal
+        $(modal7).modal("hide");
+      });
+
+      closeButton8.addEventListener("click", function() {
+        // Use Bootstrap's modal method to close the modal
+        $(modal8).modal("hide");
+      });
+
+      closeButton9.addEventListener("click", function() {
+        // Use Bootstrap's modal method to close the modal
+        $(modal9).modal("hide");
+      });
+    </script>
 
     <!-- Photo Upload -->
     <script>
